# quorum

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  TESTING.md  config.example.yaml  config.mock.yaml  docker-compose.yml  pyproject.toml
.github/: house_check.py
.github/workflows/: ci.yml
evals/: reasoning-hard.yaml  reasoning.yaml
evals/packs/coding-humaneval-static/: manifest.yaml  promotion_test.json  train.json  validation.json
evals/packs/extraction-banking77/: manifest.yaml  promotion_test.json  train.json  validation.json
evals/packs/reasoning-math-gsm8k/: manifest.yaml  promotion_test.json  train.json  validation.json
quorum/: __init__.py  __main__.py  adapters.py  api.py  bench.py  config.py  consistency.py  contextwindow.py  cost.py  datasets.py  evalpacks.py  events.py  exporter.py  format.py  grade.py  hooks.py  judge.py  model.py  orchestrator.py  prompts.py  promptsmith.py  provider.py  rank.py  render.py  scaffold.py  selftest.py  serve.py  serveapi.py  store.py  throttle.py
quorum/prompts/: __init__.py  base.py  council.py  debate.py  leasttomost.py  moa.py  reflexion.py  selfdiscover.py  stepback.py  verify.py
quorum/scoring/: __init__.py  text.py
quorum/strategies/: __init__.py  cascade.py  council.py  debate.py  ensemble.py  leasttomost.py  moa.py  refine.py  reflexion.py  selfconsistency.py  selfdiscover.py  selfmoa.py  stepback.py  verify.py
tests/: helpers.py  test_adapters.py  test_adversarial.py  test_api.py  test_bench.py  test_cascade.py  test_config.py  test_config_validate.py  test_consistency.py  test_contextwindow.py  test_datasets.py  test_evalpacks.py  test_evaluation_store.py  test_events.py  test_grade.py  test_hooks.py  test_judge.py  test_judge_cadence.py  test_leasttomost.py  test_prompts.py  test_provider_cost.py  test_rank.py  test_reasoning_strategies.py  test_rigorous.py  test_scoring.py  test_selfconsistency.py  test_selfdiscover.py  test_selfmoa.py  test_serveapi.py  test_serveapi_http.py  test_stepback.py  test_store_export.py  test_strategies.py  test_throttle.py  test_version.py
tests/fixtures/: tasks.small.yaml
(+12 files in other folders)
