[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum"
version = "0.1.0"
description = "Multi-model deliberation: design/refine a prompt, then debate a solution across several AI models (debate+judge, council+chairman, mixture-of-agents) until a judge scores it good enough. Provider-agnostic, offline-testable, local-only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rinz0x0cruz" }]
keywords = ["llm", "multi-agent", "debate", "mixture-of-agents", "council", "prompt-optimization", "cli"]
dependencies = [
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]
tokens = ["tiktoken>=0.7"]   # optional: exact token counting for cost accounting

[project.scripts]
quorum = "quorum.__main__:main"

# Deliberation strategies are plugins: add your own by registering an entry point
# in this group that resolves to a callable ``run(ctx) -> Session``.
[project.entry-points."quorum.strategies"]
debate = "quorum.strategies.debate:run"
council = "quorum.strategies.council:run"
moa = "quorum.strategies.moa:run"
refine = "quorum.strategies.refine:run"
ensemble = "quorum.strategies.ensemble:run"
selfconsistency = "quorum.strategies.selfconsistency:run"
selfmoa = "quorum.strategies.selfmoa:run"
reflexion = "quorum.strategies.reflexion:run"
verify = "quorum.strategies.verify:run"
cascade = "quorum.strategies.cascade:run"

# Text scorers are plugins too: register a class or instance resolving to a
# ``Scorer`` (``score(query, text) -> float`` in 0..1) in this group. The built-in
# ``lexical`` scorer is also registered in-process, so it works with no install.
[project.entry-points."quorum.scorers"]
lexical = "quorum.scoring:LexicalScorer"

[tool.setuptools.packages.find]
include = ["quorum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Conservative: real-error rules (pyflakes + select pycodestyle), not style churn.
select = ["E4", "E7", "E9", "F"]
